# eos

./: .dir-locals.el  .dockerignore  .gitignore  .gitmodules  .python-version  .tool-versions  Dockerfile  Dockerfile.cloud  Dockerfile.local  Dockerfile.poetry  Dockerfile.umamba  LICENSE  MANIFEST.in  Makefile  README.md  README.org  ceos-env.yaml  checkpoint  cutelog-pandasgui.yml  data.xlsx  demo.py  docker-compose.yml  drl-carla-manual.yml  eos-env-lock.txt  eos-poetry.yaml  eos-requirements.txt  gym-carla-env.yml  mbs_environment.yml  mbs_environment1.yml  meos-env.yaml  meos-nbd.yaml  meos-update.yml  neos.yaml  pyproject.toml  pyproject.toml.poetry  pyproject.toml.setuptools  pyproject.toml.umamba  readxlsx.py  requirements-backup.txt  requirements-columns.txt  (+14 more)
.github/workflows/: deploy.yaml  test.yaml
_eos/: README.md  __init__.py  _modidx.py
_eos/suite/: rl_agent_suite-train-ddpg-baseline.py
data/: .~lock.WLTC.xlsx#  14pieces_approx.csv  WLTC.xlsx  baseline.xls  calib_visualization.ipynb  data.xlsx  highring.xodr  init_table  racetrack.xodr  report.json  small-racetrack.xodr  status.json  straight.xodr  waypoint_highring.xls  waypoint_highring.xlsx  waypoint_human.xlsx  waypoint_small_track.xlsx  waypoint_standard.xlsx  wltc_statistics_plot.py
data/train_data_highring/: waypoint_set1.xlsx  waypoint_set2.xlsx  waypoint_set3.xlsx  waypoint_set4.xlsx  waypoint_set5.xls  waypoint_set6.xls  waypoint_set6.xlsx
eos/: __init__.py  __main__.py  _modidx.py  agent.py  agent_ddpg.py  agent_rdpg.py  avatar.py  avatar_archive.py  avatar_ddpg.py  avatar_rdpg.py  l045a_ac_tf.py  l045a_ac_tf_add_obs.py  l045a_ac_tf_asyncio.py  l045a_ac_tf_coastdown.py  l045a_ddpg_ao.py  l045a_ddpg_aoep.py  l045a_ddpg_coastdown.py  l045a_ddpg_epfree.py  l045a_ddpg_redob.py  l045a_ddpg_tf.py  l045a_ep_ac_shared.py  l045a_epfree_ac_shared.py  l045a_rdpg.py  mypy.ini  pg-veos.py  realtime_train_infer_ddpg.py  realtime_train_infer_rdpg.py  rl_agent.py  sandbox.py
eos/agent/: __init__.py  ac_gaussian.py  ddpg.py  dpg.py
eos/algo/: __init__.py  ac_gaussian.py  arr_buffer.py  buffer.py  db_buffer.py  doc_buffer.py  dpg.py  hyperparams.py  record_buffer.py
eos/comm/: __init__.py  udp_sender.py  vcu_calib_generator.py
eos/config/: __init__.py  ai_map.csv  commandline.opt  db_config.py  messenger_config.py  vb7_init_table.csv  vcu_calib_generator.py  vehicle_signal_config.py
eos/struct/: __init__.py  data.py  eos_time.py
eos/suite/: l045a-coastdown-aa-suite.py  l045a-coastdown-suite.py  l045a-ddpg-ao-suite.py  l045a-ddpg-coastdown-suite.py  l045a-ddpg-epfree-suite.py  l045a-ddpg-redob-suite.py  l045a-ep-ac-shared-suite.py  l045a-epfree-ac-shared-suite.py  l045a-rdpg-suite.py  l045a-suite.py  l045a-transcribe.py  realtime_ddpg_suite.py  realtime_rdpg_suite.py  rl_agent_suite-infer-ddpg-baseline.py  rl_agent_suite-train-ddpg-baseline.py  rl_agent_suite.py
eos/utils/: BPTT_pytorch.py  __init__.py  avro_codes.ipynb  data_interface.py  decorators.py  eos_arrow_partition_processing.ipynb  eos_dataframe_mongo_codecs.ipynb  eos_episode_dataframe.ipynb  eos_pandas.py  eos_record_dataframe.ipynb  eos_timeseries_dataframe.ipynb  exception.py  function.ipynb  generate_noneco_table.ipynb  generate_regen.ipynb  gracefulkiller.py  log.py  log2json.ipynb  log2json.py  mayavi-demo.py  numerics.py  pandasgui.ipynb  queuing.ipynb  sandbox.ipynb  settings.ini  stateful_LSTM.ipynb  test_avro.ipynb  test_brak_pedal.ipynb  tf_function_decorator_test.py  tflite_convert.ipynb  tflite_convert_restore.ipynb  thread_event.ipynb  thread_event.py  visual_pm.ipynb  visualize_eco_table.py
eos/visualization/: __init__.py  acc_plot.py  plot.py  visual.py
gym_carla/envs/: carla_env.py  route_planner.py
lib/: backup.yml  gym_carla.yml  requirements.txt
nbs/: 01.avatar.ipynb  99.sandbox.ipynb  avatar.ipynb  index.ipynb  nbdev.yml  sidebar.yml
src/: __init__.py  ac_tf.py  baseline_data.xlsx  demo-suite.py  demo.py  draw_lane.py  l045a-coastdown-aa-suite.py  l045a-coastdown-suite.py  l045a-ddpg-ao-suite.py  l045a-ddpg-aoep-suite.py  l045a-ddpg-coastdown-suite.py  l045a-ddpg-epfree-suite.py  l045a-ddpg-redob-suite.py  l045a-ep-ac-shared-suite.py  l045a-epfree-ac-shared-suite.py  l045a-rdpg-suite.py  l045a-suite.py  l045a-transcribe.py  l045a_ac_tf.py  l045a_ac_tf_add_obs.py  l045a_ac_tf_asyncio.py  l045a_ac_tf_coastdown.py  l045a_ddpg_ao.py  l045a_ddpg_aoep.py  l045a_ddpg_coastdown.py  l045a_ddpg_epfree.py  l045a_ddpg_redob.py  l045a_ddpg_tf.py  l045a_environment.py  l045a_ep_ac_shared.py  l045a_epfree_35kpmh.py  l045a_epfree_ac_shared.py  l045a_rdpg.py  pg-veos.py  pg_carla.py  pg_carla_agent.py  readxlsx.py  setup.py  tel.xodr  test_calc_trip_length.py  (+4 more)
src/agent/: __init__.py  ac_gaussian.py  ddpg.py  rdpg.py
src/checkpoints/: cp-{epoch:04d}.ckpt.data-00000-of-00001  cp-{epoch:04d}.ckpt.index
src/comm/: __init__.py  carla_ros.py  udp_sender.py  vcu_calib_generator.py
src/communication/: carla_ros.py  udp_sender.py
src/gym_carla/: __init__.py
src/suite/: l045a-ddpg-redob-suite.py  l045a-ep-ac-shared-suite.py  l045a-epfree-ac-shared-suite.py  l045a-suite.py
src/test/: __init__.py  test_calc_trip_length.py  test_doubler.py  (+3 more)
tf_ckpts/: checkpoint  ckpt-1.data-00000-of-00001  ckpt-1.index  ckpt-12.data-00000-of-00001  ckpt-12.index  ckpt-13.data-00000-of-00001  ckpt-13.index  ckpt-14.data-00000-of-00001  ckpt-14.index  ckpt-15.data-00000-of-00001  ckpt-15.index  ckpt-155.data-00000-of-00001  ckpt-155.index  ckpt-156.data-00000-of-00001  ckpt-156.index  ckpt-157.data-00000-of-00001  ckpt-157.index  ckpt-158.data-00000-of-00001  ckpt-158.index  ckpt-159.data-00000-of-00001  ckpt-159.index  ckpt-16.data-00000-of-00001  ckpt-16.index  ckpt-160.data-00000-of-00001  ckpt-160.index  ckpt-161.data-00000-of-00001  ckpt-161.index  ckpt-162.data-00000-of-00001  ckpt-162.index  ckpt-163.data-00000-of-00001  ckpt-163.index  ckpt-164.data-00000-of-00001  ckpt-164.index  ckpt-17.data-00000-of-00001  ckpt-17.index  ckpt-18.data-00000-of-00001  ckpt-18.index  ckpt-19.data-00000-of-00001  ckpt-19.index  ckpt-2.data-00000-of-00001  (+11 more)
(+86 files in other folders)
