[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=42", "wheel"]
build-backend = "poetry.core.masonry.api"

[project]
name = "eos"
description="Electric Optimization System: A python package for applying deep reinforcement learning to electric powertrain energy saving policy"
version = "1.0.0"
readme = "README.md"
keywords = ["deep learning", "deep reinforcement learning", "electric powertrain", "energy saving", "policy"]
authors= [
    {name = "Binjian Xin", email = "binjian.xin@newrizon.com"},
]
maintainers= [
    {name = "Binjian Xin", email = "binjian.xin@newrizon.com"},
]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Frameworks :: Pytest",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mypy",
    "tensorflow-gpu==2.10.0",
    "tensorflow-estimator",
    "tensorflow-probability",
    "tensorboard",
    "python-json-logger",
    "plotly",
    "Pillow",
    "pandas",
    "opt-einsum",
    "jupyterlab",
    "keras",
    "cuda-python",
    "numpy",
    "scipy",
    "seaborn",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "pymongo",
    "pyarrow",
    "gitpython",
    "pytest",
    "reportlab",
    "cuda-python",
    "nvidia-cudnn-cu11",
    "rocketmq",
    "cutelog",
    "pymongoarrow",
    "pyqt5",
]

[tool.poetry]
name = "eos"
version = "0.0.4"
description="Electric Optimization System: A python package for applying deep reinforcement learning to electric powertrain energy saving policy"
authors = ["binjian.xin <binjian.xin@newrizon.com>"]
maintainers = ["binjian.xin <binjian.xin@newrizon.com>"]
readme = "README.md"
license = "LICENSE"
repository = "ssh://git@gitlab.newrizon.work:2222/its/ai/eos.git"
keywords = ["deep learning", "deep reinforcement learning", "electric powertrain", "energy saving", "policy"]
classifiers = [
    "Frameworks :: Pytest",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["eos/*", "*.csv" ]
#virtualenvs.in-project = true

[tool.poetry.dependencies]
python = ">=3.10,<3.12"


[tool.poetry.dev-dependencies]
pytest = ">=7.1"

[tool.poetry.scripts]
my-script = "eos.eos.realtime_train_infer_ddpg:__main__"

[[tool.poetry.source]]
name = "official"
url = "https://pypi.org/simple"
default = true

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
secondary = true

[tool.poetry2conda]
name = "eos-conda"